<resources>
    <string name="app_name">Boa Viagem</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="novo_gasto">Novo Gasto</string>
    <string name="nova_viagem">Nova Viagem</string>
    <string name="minhas_viagens">Minhas Viagens</string>
    <string name="configuracoes">Configurações</string>
    <string name="erro_autenticacao">Login Inválido</string>
    <string name="destino">Destino:</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="tipo_da_viagem">Tipo da Viagem</string>
    <string name="laser">Laser</string>
    <string name="negocios">Negócios</string>
    <string name="data_saida">Data da Saída</string>
    <string name="data_chegada">Data da Chegada</string>
    <string name="selecionar">Selecionar</string>
    <string name="orcamento">Orçamento:</string>
    <string name="qtdpessoas">Qtd. Pessoas:</string>
    <string name="salvar">Salvar</string>
    <string name="title_activity_viagem">ViagemActivity</string>
</resources>
